fix overflow info 3

--- a/css/info3.css
+++ b/css/info3.css
@@ -44,28 +44,26 @@
     float: left;
     display: flex;
     width: 80%;
-    overflow: inherit;
 }
 
 .info3_gallery>a {
     float: left;
     margin-right: 1vw;
     flex: 1;
-/*    width: 80%;*/
 }
 
 .info3_img {
     margin: 0;
     padding-top:0;
-    width: 280px;
+    width: 100%;
     height: 280px;
-    overflow: hidden;
+    overflow-y: hidden;
     border: 5px solid #F8F8F8;
     float: left;
 }
 
 .info3_img>img {
-    width: 300px;
+    width: 100%;
     height: 300px;
     padding: 0;
     transition: 0.25s;
